include rig in aad, container, main, reserve responses
